// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests GET /api/clients 1`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 2`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 3`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 4`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 5`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 6`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 7`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients 8`] = `
Object {
  "id": Any<Number>,
  "name": Any<String>,
  "surname": Any<String>,
}
`;

exports[`tests GET /api/clients/:id 1`] = `
Object {
  "address": null,
  "basket": null,
  "city": null,
  "country": null,
  "email": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "phone": null,
  "role": null,
  "surname": Any<String>,
  "wallet": Any<Number>,
}
`;

exports[`tests GET /api/products 1`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "All-Purpose",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 2`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 3`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 4`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 5`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 6`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 7`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 8`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Dairy and Eggs",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 9`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Fish",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 10`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "Home and Garden",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests GET /api/products 11`] = `
Object {
  "farmer": Any<Number>,
  "farmerName": Any<String>,
  "filter": "All-purpose",
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/deliveries after the login as a wmanager 1`] = `
Object {
  "farmer": Any<Object>,
  "id": Any<Number>,
  "orderId": Any<Number>,
  "product": Any<Object>,
  "quantity": Any<Number>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 1`] = `
Object {
  "availability": Any<String>,
  "confirmed": 1,
  "farmer": Any<Number>,
  "farmerName": "FattoriaBella",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 2`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "CampoGrande",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 3`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "TerraGrossa",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 4`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "TerraGrossa",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 5`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "CampoGrande",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 6`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "TerraGrossa",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 7`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "FattoriaBella",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 8`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "FattoriaBella",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 9`] = `
Object {
  "availability": Any<String>,
  "confirmed": 0,
  "farmer": Any<Number>,
  "farmerName": "FattoriaBella",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;

exports[`tests get /api/nextProducts after the login as a customer not on sunday 10`] = `
Object {
  "availability": Any<String>,
  "confirmed": 1,
  "farmer": Any<Number>,
  "farmerName": "FattoriaBella",
  "filter": Any<String>,
  "id": Any<Number>,
  "name": Any<String>,
  "price": Any<Number>,
  "quantity": Any<Number>,
  "unit": Any<String>,
}
`;
